<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Đăng Nhập"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="username:"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtuser"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/user" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="password:"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonDangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DN"/>
        <Button
            android:id="@+id/buttonThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonExit"/>
    </LinearLayout>
</LinearLayout>