<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="USER"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="Tên User:" />

        <EditText
            android:id="@+id/editTextTenuser"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:text="@string/themuser" />

        <Button
            android:id="@+id/buttonTimkiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/timkiem" />
    </LinearLayout>

    <ListView
        android:id="@+id/ListviewDanhSachUser"
        android:layout_width="match_parent"
        android:layout_height="255dp" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/buttonXoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xoa"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</LinearLayout>