<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VĂN PHÒNG PHẨM"
        android:textSize="30dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:text="Mã VPP:" />

        <EditText
            android:id="@+id/editTextMavpp"
            android:layout_width="271dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:text="Tên VPP:"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/SpinnerTenVPP"
            android:layout_width="270dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:text="Đơn vị tính:" />

        <EditText
            android:id="@+id/editTextDonvitinh"
            android:layout_width="270dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:text="Gía:" />

        <EditText
            android:id="@+id/editTextGia"
            android:layout_width="270dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/buttonTimkiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timkiem"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonRefesh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refesh"/>
    </LinearLayout>

    <ListView
        android:id="@+id/ListviewDanhSachVPP"
        android:layout_width="match_parent"
        android:layout_height="226dp" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/buttonXoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xoa"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</LinearLayout>