<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="THÊM USER"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="Họ Tên NV:" />

        <EditText
            android:id="@+id/editTextHotenNV"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="Tên User:" />

        <EditText
            android:id="@+id/editTextTenuser"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="Password:" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="Nhập lại pass:" />

        <EditText
            android:id="@+id/editTextNhaplaipass"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">
        <Button
            android:id="@+id/buttonDangki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangki"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/buttonRefesh"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refesh"/>
        <Button
            android:id="@+id/buttonThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonExit"/>
    </LinearLayout>
</LinearLayout>